Add styles for legal page

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -90,6 +90,7 @@
   @import "modules/pages/api";
   @import "modules/pages/apps";
   @import "modules/pages/downloads";
+  @import "modules/pages/legal";
   @import "modules/pages/oauth";
   @import "modules/pages/spaces";
   @import "modules/pages/status";
