--- a/css/variants/aubergine-monospaced.css
+++ b/css/variants/aubergine-monospaced.css
@@ -1,4 +1,4 @@
-@-moz-document regexp("https://[^./]*\\.slack\\.com/.*") { body { background: #3e313c; color: #f0d9ed; }
+@-moz-document regexp("https://[^./]*\\.slack\\.com/(?!pricing)(?!security).*") { body { background: #3e313c; color: #f0d9ed; }
   a { color: #a3839f; }
   a:link, a:visited { color: #a3839f; }
   a:hover, a:active, a:focus { color: #d4bbd1; }
@@ -1253,9 +1253,13 @@
   .admin_list_item.expanded .sub_action { color: #a3839f; }
   .admin_list_item.expanded .sub_action:hover { color: #d4bbd1; }
   @media screen and (max-width: 768px) { .admin_list_item.expanded .sub_action + .sub_action:hover::before, .admin_list_item.expanded .sub_action + .sub_action:hover::after { color: #a3839f; } }
-  .billing_selection { border: 2px solid #372c36; color: #f0d9ed !important; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
-  .billing_selection:hover { border-color: #372c36; }
-  .billing_selection.active { background: #61485e; border-color: #4d394b; }
+  .billing_selection { border-color: #372c36; color: #f0d9ed !important; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+  .billing_selection:hover { border-color: #876484; }
+  .billing_selection.active { background: #61485e; border-color: #876484; }
+  .billing_selection.billing_selection--refactor { border-color: #61485e; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+  .billing_selection.billing_selection--refactor:hover { border-color: #876484; }
+  .billing_selection.billing_selection--refactor.active { background: #61485e; border-color: #876484; }
+  .billing_selection .billing_selection__price { color: #f0d9ed; }
   #billing_contacts_container { background: #4d394b; border-top: 1px solid #372c36; }
   .billing_callout { background: none; }
   .billing_contact { border-bottom: 1px solid #3e313c; }
@@ -1434,6 +1438,12 @@
   .sms_form .sms_select_container .lazy_filter_select { background-color: #61485e; }
   .go_button { background-color: #3e313c; color: #a3839f; }
   nav.top.fixed { display: none; }
+  #api_nav h5 { color: #f0d9ed; }
+  #api_nav #api_sections ul li a { border-bottom-color: #372c36; color: #a3839f; }
+  #api_nav #api_sections ul li a:hover { color: #f0d9ed; }
+  #api_nav #api_sections ul li a.active { background: #4d394b; color: #a3839f; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); }
+  #api_nav #api_sections ul li a.active:hover { background: #4d394b; color: #a3839f; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); }
+  .col.span_1_of_2.bordered { background-color: #4d394b; }
   body.oauth_page { background: #4d394b; }
   body.oauth_page .oauth_header { background: #3e313c !important; }
   body.oauth_page .alert { border-color: #772207; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); }
