--- a/css/variants/black-monospaced.css
+++ b/css/variants/black-monospaced.css
@@ -1,4 +1,4 @@
-@-moz-document regexp("https://[^./]*\\.slack\\.com/.*") { body { background: #222; color: #e6e6e6; }
+@-moz-document regexp("https://[^./]*\\.slack\\.com/(?!pricing)(?!security).*") { body { background: #222; color: #e6e6e6; }
   a { color: #949494; }
   a:link, a:visited { color: #949494; }
   a:hover, a:active, a:focus { color: #c7c7c7; }
@@ -1253,9 +1253,13 @@
   .admin_list_item.expanded .sub_action { color: #949494; }
   .admin_list_item.expanded .sub_action:hover { color: #c7c7c7; }
   @media screen and (max-width: 768px) { .admin_list_item.expanded .sub_action + .sub_action:hover::before, .admin_list_item.expanded .sub_action + .sub_action:hover::after { color: #949494; } }
-  .billing_selection { border: 2px solid #000; color: #e6e6e6 !important; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
-  .billing_selection:hover { border-color: #000; }
-  .billing_selection.active { background: #545454; border-color: #363636; }
+  .billing_selection { border-color: #000; color: #e6e6e6 !important; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+  .billing_selection:hover { border-color: #828282; }
+  .billing_selection.active { background: #545454; border-color: #828282; }
+  .billing_selection.billing_selection--refactor { border-color: #545454; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.5); }
+  .billing_selection.billing_selection--refactor:hover { border-color: #828282; }
+  .billing_selection.billing_selection--refactor.active { background: #545454; border-color: #828282; }
+  .billing_selection .billing_selection__price { color: #e6e6e6; }
   #billing_contacts_container { background: #363636; border-top: 1px solid #000; }
   .billing_callout { background: none; }
   .billing_contact { border-bottom: 1px solid #222; }
@@ -1434,6 +1438,12 @@
   .sms_form .sms_select_container .lazy_filter_select { background-color: #545454; }
   .go_button { background-color: #222; color: #949494; }
   nav.top.fixed { display: none; }
+  #api_nav h5 { color: #e6e6e6; }
+  #api_nav #api_sections ul li a { border-bottom-color: #000; color: #949494; }
+  #api_nav #api_sections ul li a:hover { color: #e6e6e6; }
+  #api_nav #api_sections ul li a.active { background: #363636; color: #949494; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); }
+  #api_nav #api_sections ul li a.active:hover { background: #363636; color: #949494; text-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); }
+  .col.span_1_of_2.bordered { background-color: #363636; }
   body.oauth_page { background: #363636; }
   body.oauth_page .oauth_header { background: #222 !important; }
   body.oauth_page .alert { border-color: #772207; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.25); }
