--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -49,8 +49,17 @@
       }
 
       &.unread {
-        &:not(.muted_channel) a {
+        &:not(.muted_channel) {
           color: lighten($base-font-color, 6%) !important;
+
+          .channel_name,
+          .group_name,
+          .im_name,
+          .mpim_name,
+          > a {
+            background: $color-shade-dark;
+            color: lighten($base-font-color, 6%) !important;
+          }
         }
 
         .prefix {
@@ -89,9 +98,11 @@
 
 #channels_scroller.show_which_channel_is_active ul li.active {
   .channel_name,
-  span.im_name {
+  .group_name,
+  .mpim_name,
+  .im_name {
     background: $color-base;
-    color: $base-font-color;
+    color: $base-font-color !important;
   }
 
   a {
