Add style for hex color square border

--- a/scss/modules/messaging/_attachments.scss
+++ b/scss/modules/messaging/_attachments.scss
@@ -368,3 +368,7 @@ ts-message .reply_bar {
     border-color: $color-shade-darkest;
   }
 }
+
+.inline_color_block {
+  border-color: $color-shade-light;
+}
