--- a/css/variants/midnight-blue-monospaced.css
+++ b/css/variants/midnight-blue-monospaced.css
@@ -36,14 +36,15 @@
   .channels_list_holder ul li .channel_name:hover, .channels_list_holder ul li .group_name:hover, .channels_list_holder ul li .im_name:hover, .channels_list_holder ul li .mpim_name:hover, .channels_list_holder ul li > a:hover { background: #000 !important; border-bottom-right-radius: 0.25rem; border-top-right-radius: 0.25rem; }
   .channels_list_holder ul li .group_close, .channels_list_holder ul li .im_close, .channels_list_holder ul li .mpim_close { color: #1793d1 !important; }
   .channels_list_holder ul li.mention a { color: #00b9f2; }
-  .channels_list_holder ul li.unread:not(.muted_channel) a { color: #12c7ff !important; }
+  .channels_list_holder ul li.unread:not(.muted_channel) { color: #12c7ff !important; }
+  .channels_list_holder ul li.unread:not(.muted_channel) .channel_name, .channels_list_holder ul li.unread:not(.muted_channel) .group_name, .channels_list_holder ul li.unread:not(.muted_channel) .im_name, .channels_list_holder ul li.unread:not(.muted_channel) .mpim_name, .channels_list_holder ul li.unread:not(.muted_channel) > a { background: #181818; color: #12c7ff !important; }
   .channels_list_holder ul li.unread .prefix { color: #00b9f2 !important; opacity: 1; }
   .channels_list_holder .unread_just { background: #000; color: #00b9f2; }
   .channels_list_holder .unread_highlights { background: #bf360c; color: #00b9f2; text-shadow: 0 1px 0 rgba(0, 0, 0, 0.15); }
   .channels_list_new_btn { color: #1793d1; }
   .list_more { border-bottom: 1px dotted #1793d1; color: #1793d1 !important; }
   .list_more:hover { border-bottom: 1px solid #299bd4; color: #299bd4 !important; }
-  #channels_scroller.show_which_channel_is_active ul li.active .channel_name, #channels_scroller.show_which_channel_is_active ul li.active span.im_name { background: #000; color: #00b9f2; }
+  #channels_scroller.show_which_channel_is_active ul li.active .channel_name, #channels_scroller.show_which_channel_is_active ul li.active .group_name, #channels_scroller.show_which_channel_is_active ul li.active .mpim_name, #channels_scroller.show_which_channel_is_active ul li.active .im_name { background: #000; color: #00b9f2 !important; }
   #channels_scroller.show_which_channel_is_active ul li.active a.group_name, #channels_scroller.show_which_channel_is_active ul li.active a.im_name, #channels_scroller.show_which_channel_is_active ul li.active a.mpim_name { background: #000; color: #00b9f2; }
   #channels_scroller.show_which_channel_is_active ul li.active a.channel_name .prefix, #channels_scroller.show_which_channel_is_active ul li.active a.group_name .prefix { color: #1793d1; }
   #channels_scroller.show_which_channel_is_active ul li.active .unread_highlights { background: #bf360c; color: #00b9f2; }
@@ -350,7 +351,7 @@
   .day_divider hr, .mention_day_container_div .day_divider hr { border-bottom: 0; border-top: 1px solid #181818; }
   .day_divider .day_divider_label { background: #000; }
   .day_container .day_msgs { border-top: 1px solid #181818; }
-  .day_container.unread_day_container .day_msgs { border-color: #bf360c; }
+  .day_container.unread_day_container .day_msgs { border-color: #303030; }
   .day_container .day_divider { background: none; color: #1793d1; }
   .day_container .day_divider .day_divider_label { background: #000; }
   .search_form { border-color: #282828; }
@@ -419,11 +420,10 @@
   #convo_container ts-conversation ts-relatives ts-message.deleted .message_content { color: #00b9f2; }
   #convo_container ts-conversation ts-relatives ts-message:not(.selected):not(.highlight):not(.delete_mode) { background-color: #000; }
   #convo_container ts-conversation ts-relatives ts-message:not(.selected):not(.highlight):not(.delete_mode).new { background-color: #0d0d0d; }
-  #msgs_div .unread_divider hr { border-top: 1px solid #bf360c; }
-  #msgs_div .unread_divider .divider_label { background: #000; color: #bf360c; }
+  #msgs_div .unread_divider hr { border-top: 1px solid #282828; }
+  #msgs_div .unread_divider .divider_label { background: #000; color: #282828; }
   #msgs_div .unread_divider.no_unreads hr { border-top-color: #181818; }
   #msgs_div .unread_divider.no_unreads .divider_label { color: #1793d1; }
-  #msgs_div .unread_divider.adjacent_to_date { background: #000; }
   #msgs_div ts-message.automated_grey { background: #101010; }
   #msgs_div ts-message.automated_grey .timestamp { color: #1793d1; }
   #msgs_div ts-message.automated_grey:hover .timestamp { color: #299bd4; }
@@ -519,6 +519,7 @@
   .post_body code, .post_body pre { background: #181818; }
   ts-message .reply_bar .reply_bar_caret, ts-message .reply_bar .view_conv_hover, ts-message .reply_bar .last_reply_at { color: #1793d1; }
   ts-message .reply_bar:hover { background: #000; border-color: #101010; }
+  .inline_color_block { border-color: #282828; }
   .messages_banner { color: #00b9f2; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
   .messages_banner a { color: #00b9f2; }
   .messages_banner a:hover { color: #00b9f2; }
