--- a/scss/modules/modals/_file.scss
+++ b/scss/modules/modals/_file.scss
@@ -91,3 +91,14 @@
     color: $base-font-color;
   }
 }
+
+#file_comment_textarea.texty_comment_input {
+  background: $color-base;
+  border-color: $color-shade-dark;
+  color: $base-font-color;
+
+  &.focus,
+  &:hover {
+    border-color: $color-shade-dark;
+  }
+}
