Add styles for custom current statuses

--- a/scss/modules/messaging/_dense.scss
+++ b/scss/modules/messaging/_dense.scss
@@ -37,6 +37,10 @@
     &.unarchived {
       color: $color-highlight;
     }
+
+    .message_content .message_current_status {
+      border-color: $color-shade-dark;
+    }
   }
 
   #message_editing_info {
