--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -51,6 +51,7 @@
 @import "modules/flexpane/whats-new";
 
 @import "modules/emojis/base";
+@import "modules/emojis/current_status";
 @import "modules/emojis/reactions";
 
 @import "modules/modals/base";
