--- a/scss/modules/flexpane/_team.scss
+++ b/scss/modules/flexpane/_team.scss
@@ -138,3 +138,23 @@
     }
   }
 }
+
+#member_preview_scroller .member_data_table .current_status_cell {
+  .current_status_container {
+    .current_status_cover {
+      &:hover {
+        border-color: $color-shade-dark;
+      }
+    }
+
+    &:not(.active) {
+      .current_status_cover {
+        &.without_status_set {
+          .current_status_placeholder {
+            color: rgba($base-font-color, 0.35) !important;
+          }
+        }
+      }
+    }
+  }
+}
