Correct button color for attachment preview actions

--- a/scss/modules/messaging/_attachments.scss
+++ b/scss/modules/messaging/_attachments.scss
@@ -253,6 +253,7 @@
 
   .preview_actions .btn {
     background-color: $color-shade-dark;
+    color: $base-font-color !important;
 
     &::after {
       border-color: $color-shade-darkest;
